num_enum/tests/try_build/compile_fail/garbage_attribute.stderr
error: Invalid attribute: expected one of: `default`, `catch_all`, `alternatives`, `num`
 --> $DIR/garbage_attribute.rs:5:5
  |
5 |     #[num_enum(garbage)]
  |     ^^^^^^^^^^^^^^^^^^^^
